# dbt-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
dbt_analyzer/: __init__.py  cli.py  models.py  project.py  recommendations.py  report.py  results.py  rules.py
tests/: conftest.py  test_cli.py  test_project.py  test_recommendations.py  test_report.py  test_results.py  test_rules.py
tests/fixtures/heavy_non_incremental/: manifest.json  run_results.json
tests/fixtures/simple_project/: manifest.json  run_results.json
